--- a/src/App.scss
+++ b/src/App.scss
@@ -53,7 +53,7 @@ h1 {
 
     .player-section {
         padding-top: 2rem;
-        
+
         .profile-picture {
             margin-bottom: -1rem;
             padding: 2rem 0rem 0rem;
@@ -71,4 +71,11 @@ h1 {
             text-align: center;            
         }
     }
+}
+
+.game-over {
+    background-color: $lightblack;
+    color: red;
+    font-size: 4rem;
+    position: absolute;
 }
