--- a/src/App.scss
+++ b/src/App.scss
@@ -6,80 +6,132 @@ $font-l: 3rem;
 $font-m: 2.5rem;
 $font-xl: 4rem;
 
-
 @font-face {
-    font-family: "Beleren";
-    src: url("/fonts/Beleren-Bold.ttf") format("truetype");
-    font-weight: bold;
-    font-style: normal;
+	font-family: "Beleren";
+	src: url("/fonts/Beleren-Bold.ttf") format("truetype");
+	font-weight: bold;
+	font-style: normal;
 }
 
 body {
-    background: url("/images/grey-patterned-bg.jpg");
-    color: whitesmoke;
-    font-family: "Beleren", sans-serif;
-    font-weight: bold;
-    margin: 0rem;
+	background: url("/images/grey-patterned-bg.jpg");
+	color: whitesmoke;
+	font-family: "Beleren", sans-serif;
+	font-weight: bold;
+	margin: 0rem;
 }
 
 h1 {
-    border-bottom: $grey-border;
-    display: flex;
-    flex-direction: column;
-    font-size: $font-l;
-    padding: 1.5rem 0rem;
-    place-items: center center;
+	border-bottom: $grey-border;
+	display: flex;
+	flex-direction: column;
+	font-size: $font-l;
+	padding: 1.5rem 0rem;
+	place-items: center center;
 }
 
 .main-section {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 
-    .card {
-        border: $grey-border;
-        border-radius: 1.5rem;
-        padding: 0.5rem;
-        margin: 2rem 0rem 1rem;
-        width: 22rem;
-    }
+	.card-area {
+		border-radius: 1.5rem;
+		border: $grey-border;
+		margin: 2rem 0rem 1rem;
+		position: relative;
 
-    .search-bar {
-        background-color: $grey;
-        color: $lightblack;
-        font-family: "Beleren", sans-serif;
-        height: 2rem;
-        margin-bottom: -0.75rem;
-        /* TODO: change to use padding */
-        width: 20rem;
-    }
+		.card {
+			padding: 0.5rem;
+			width: 22rem;
+		}
 
-    .player-section {
-        padding-top: 2rem;
+		.hidden-area {
+			border-radius: 1.5rem;
+			display: grid;
+			grid-template-columns: repeat(7, 1fr);
+			grid-template-rows: repeat(10, 1fr);
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			top: 0;
+			right: 0;
 
-        .profile-picture {
-            margin-bottom: -1rem;
-            padding: 2rem 0rem 0rem;
-            width: 20rem;
-        }
+			.square {
+				background-color: $lightblack;
 
-        .life-counter {
-            background-color: $lightblack;
-            border: 0.25rem solid $darkgrey;
-            border-radius: 2rem;
-            font-size: $font-m;
-            margin: 0;
-            padding: 0.25rem 1rem;
-            position: relative;
-            text-align: center;
-        }
-    }
+				&:first-child {
+					border-radius: 1.5rem 1.5rem 0 0;
+				}
+
+				&:first-child,
+				&:nth-child(4) {
+					grid-column: 1 / span 7;
+					grid-row: 1;
+				}
+
+				&:nth-child(2) {
+					grid-column: 1;
+				}
+
+				&:nth-child(2),
+				&:nth-child(3) {
+					grid-row: 2 / span 4;
+				}
+
+				&:nth-child(3) {
+					grid-column: 7;
+				}
+
+				&:nth-child(4) {
+					border-radius: 0 0 1.5rem 1.5rem;
+					grid-row: 6 / span 5;
+				}
+
+				&:nth-child(5) {
+					grid-column-start: 2;
+					grid-row-start: 2;
+				}
+			}
+		}
+	}
+
+	.search-bar {
+		background-color: $grey;
+		color: $lightblack;
+		font-family: "Beleren", sans-serif;
+		height: 2rem;
+		margin-bottom: -0.75rem;
+		/* TODO: change to use padding */
+		width: 20rem;
+	}
+
+	.player-section {
+		padding-top: 2rem;
+
+		.profile-picture {
+			margin-bottom: -1rem;
+			padding: 2rem 0rem 0rem;
+			width: 20rem;
+		}
+
+		.life-counter {
+			background-color: $lightblack;
+			border: 0.25rem solid $darkgrey;
+			border-radius: 2rem;
+			font-size: $font-m;
+			margin: 0;
+			padding: 0.25rem 1rem;
+			position: relative;
+			text-align: center;
+		}
+	}
 }
 
 .game-over {
-    background-color: $lightblack;
-    color: red;
-    font-size: $font-xl;
-    position: absolute;
+	background-color: $lightblack;
+	color: red;
+	font-size: $font-xl;
+	position: absolute;
 }
