--- a/src/App.scss
+++ b/src/App.scss
@@ -7,131 +7,237 @@ $font-m: 2.5rem;
 $font-xl: 4rem;
 
 @font-face {
-	font-family: "Beleren";
-	src: url("/fonts/Beleren-Bold.ttf") format("truetype");
-	font-weight: bold;
-	font-style: normal;
+    font-family: "Beleren";
+    src: url("/fonts/Beleren-Bold.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
 }
 
 body {
-	background: url("/images/grey-patterned-bg.jpg");
-	color: whitesmoke;
-	font-family: "Beleren", sans-serif;
-	font-weight: bold;
-	margin: 0rem;
+    background: url("/images/grey-patterned-bg.jpg");
+    color: whitesmoke;
+    font-family: "Beleren", sans-serif;
+    font-weight: bold;
+    margin: 0rem;
 }
 
 h1 {
-	border-bottom: $grey-border;
-	display: flex;
-	flex-direction: column;
-	font-size: $font-l;
-	padding: 1.5rem 0rem;
-	place-items: center center;
+    border-bottom: $grey-border;
+    display: flex;
+    flex-direction: column;
+    font-size: $font-l;
+    padding: 1.5rem 0rem;
+    place-items: center center;
 }
 
 .main-section {
-	align-items: center;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-	.card-area {
-		border-radius: 1.5rem;
-		border: $grey-border;
-		margin: 2rem 0rem 1rem;
-		position: relative;
+    .card-area {
+        border-radius: 1.5rem;
+        border: $grey-border;
+        margin: 2rem 0rem 1rem;
+        position: relative;
 
-		.card {
-			padding: 0.5rem;
-			width: 22rem;
-		}
+        .card {
+            padding: 0.5rem;
+            width: 22rem;
+        }
 
-		.hidden-area {
-			border-radius: 1.5rem;
-			display: grid;
-			grid-template-columns: repeat(7, 1fr);
-			grid-template-rows: repeat(10, 1fr);
-			position: absolute;
-			left: 0;
-			bottom: 0;
-			top: 0;
-			right: 0;
+        .hidden-area {
+            border-radius: 1.5rem;
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            grid-template-rows: repeat(10, 1fr);
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            top: 0;
+            right: 0;
 
-			.square {
-				background-color: $lightblack;
+            .square {
+                background-color: $lightblack;
 
-				&:first-child {
-					border-radius: 1.5rem 1.5rem 0 0;
-				}
+                .overlay-square {
+                    background: rgba(0, 0, 0, 0.5);
+                    grid-column: span 1;
+                    grid-row: span 1;
 
-				&:first-child,
-				&:nth-child(4) {
-					grid-column: 1 / span 7;
-					grid-row: 1;
-				}
+                    &:nth-child(1) {
+                        grid-column: 2 / 3;
+                        grid-row: 2 / 3;
+                    }
 
-				&:nth-child(2) {
-					grid-column: 1;
-				}
+                    &:nth-child(2) {
+                        grid-column: 3 / 4;
+                        grid-row: 2 / 3;
+                    }
 
-				&:nth-child(2),
-				&:nth-child(3) {
-					grid-row: 2 / span 4;
-				}
+                    &:nth-child(3) {
+                        grid-column: 4 / 5;
+                        grid-row: 2 /3;
+                    }
 
-				&:nth-child(3) {
-					grid-column: 7;
-				}
+                    &:nth-child(4) {
+                        grid-column: 5 / 6;
+                        grid-row: 2 /3;
+                    }
 
-				&:nth-child(4) {
-					border-radius: 0 0 1.5rem 1.5rem;
-					grid-row: 6 / span 5;
-				}
+                    &:nth-child(5) {
+                        grid-column: 6 / 7;
+                        grid-row: 2 /3;
+                    }
 
-				&:nth-child(5) {
-					grid-column-start: 2;
-					grid-row-start: 2;
-				}
-			}
-		}
-	}
+                    &:nth-child(6) {
+                        grid-column: 2 / 3;
+                        grid-row: 3 / 4;
+                    }
 
-	.search-bar {
-		background-color: $grey;
-		color: $lightblack;
-		font-family: "Beleren", sans-serif;
-		height: 2rem;
-		margin-bottom: -0.75rem;
-		/* TODO: change to use padding */
-		width: 20rem;
-	}
+                    &:nth-child(7) {
+                        grid-column: 3 / 4;
+                        grid-row: 3 / 4;
+                    }
 
-	.player-section {
-		padding-top: 2rem;
+                    &:nth-child(8) {
+                        grid-column: 4 / 5;
+                        grid-row: 3 / 4;
+                    }
 
-		.profile-picture {
-			margin-bottom: -1rem;
-			padding: 2rem 0rem 0rem;
-			width: 20rem;
-		}
+                    &:nth-child(9) {
+                        grid-column: 5 / 6;
+                        grid-row: 3 / 4;
+                    }
 
-		.life-counter {
-			background-color: $lightblack;
-			border: 0.25rem solid $darkgrey;
-			border-radius: 2rem;
-			font-size: $font-m;
-			margin: 0;
-			padding: 0.25rem 1rem;
-			position: relative;
-			text-align: center;
-		}
-	}
+                    &:nth-child(10) {
+                        grid-column: 6 / 7;
+                        grid-row: 3 / 4;
+                    }
+
+                    &:nth-child(11) {
+                        grid-column: 2 / 3;
+                        grid-row: 4 / 5;
+                    }
+
+                    &:nth-child(12) {
+                        grid-column: 3 / 4;
+                        grid-row: 4 / 5;
+                    }
+
+                    &:nth-child(13) {
+                        grid-column: 4 / 5;
+                        grid-row: 4 / 5;
+                    }
+
+                    &:nth-child(14) {
+                        grid-column: 5 / 6;
+                        grid-row: 4 / 5;
+                    }
+
+                    &:nth-child(15) {
+                        grid-column: 6 / 7;
+                        grid-row: 4 / 5;
+                    }
+
+                    &:nth-child(16) {
+                        grid-column: 2 / 3;
+                        grid-row: 5 / 6;
+                    }
+
+                    &:nth-child(17) {
+                        grid-column: 3 / 4;
+                        grid-row: 5 / 6;
+                    }
+
+                    &:nth-child(18) {
+                        grid-column: 4 / 5;
+                        grid-row: 5 / 6;
+                    }
+
+                    &:nth-child(19) {
+                        grid-column: 5 / 6;
+                        grid-row: 5 / 6;
+                    }
+
+                    &:nth-child(20) {
+                        grid-column: 6 / 7;
+                        grid-row: 5 / 6;
+                    }
+                }
+
+                &:first-child {
+                    border-radius: 1.5rem 1.5rem 0 0;
+                }
+
+                &:first-child,
+                &:nth-child(4) {
+                    grid-column: 1 / span 7;
+                    grid-row: 1;
+                }
+
+                &:nth-child(2) {
+                    grid-column: 1;
+                }
+
+                &:nth-child(2),
+                &:nth-child(3) {
+                    grid-row: 2 / span 4;
+                }
+
+                &:nth-child(3) {
+                    grid-column: 7;
+                }
+
+                &:nth-child(4) {
+                    border-radius: 0 0 1.5rem 1.5rem;
+                    grid-row: 6 / span 5;
+                }
+
+                &:nth-child(5) {
+                    grid-column-start: 2;
+                    grid-row-start: 2;
+                }
+            }
+        }
+    }
+
+    .search-bar {
+        background-color: $grey;
+        color: $lightblack;
+        font-family: "Beleren", sans-serif;
+        height: 2rem;
+        margin-bottom: -0.75rem;
+        /* TODO: change to use padding */
+        width: 20rem;
+    }
+
+    .player-section {
+        padding-top: 2rem;
+
+        .profile-picture {
+            margin-bottom: -1rem;
+            padding: 2rem 0rem 0rem;
+            width: 20rem;
+        }
+
+        .life-counter {
+            background-color: $lightblack;
+            border: 0.25rem solid $darkgrey;
+            border-radius: 2rem;
+            font-size: $font-m;
+            margin: 0;
+            padding: 0.25rem 1rem;
+            position: relative;
+            text-align: center;
+        }
+    }
 }
 
 .game-over {
-	background-color: $lightblack;
-	color: red;
-	font-size: $font-xl;
-	position: absolute;
+    background-color: $lightblack;
+    color: red;
+    font-size: $font-xl;
+    position: absolute;
 }
