--- a/src/App.scss
+++ b/src/App.scss
@@ -50,7 +50,7 @@ h1 {
         .hidden-area {
             border-radius: 1.5rem;
             display: grid;
-            grid-template-columns: repeat(7, 1fr);
+            grid-template-columns: repeat(8, 1fr);
             grid-template-rows: repeat(10, 1fr);
             position: absolute;
             left: 0;
@@ -61,10 +61,15 @@ h1 {
             .square {
                 background-color: $lightblack;
 
-                .overlay-square {
-                    background: rgba(0, 0, 0, 0.5);
+                &.overlay-square {
                     grid-column: span 1;
                     grid-row: span 1;
+                    opacity: 1;
+                    
+                    &.active {
+                        transition: opacity 1s;
+                        opacity: 0;
+                      }
 
                     &:nth-child(1) {
                         grid-column: 2 / 3;
@@ -78,91 +83,111 @@ h1 {
 
                     &:nth-child(3) {
                         grid-column: 4 / 5;
-                        grid-row: 2 /3;
+                        grid-row: 2 / 3;
                     }
 
                     &:nth-child(4) {
                         grid-column: 5 / 6;
-                        grid-row: 2 /3;
+                        grid-row: 2 / 3;
                     }
 
                     &:nth-child(5) {
                         grid-column: 6 / 7;
-                        grid-row: 2 /3;
+                        grid-row: 2 / 3;
                     }
 
                     &:nth-child(6) {
-                        grid-column: 2 / 3;
-                        grid-row: 3 / 4;
+                        grid-column: 7 / 8;
+                        grid-row: 2 / 3;
                     }
 
                     &:nth-child(7) {
-                        grid-column: 3 / 4;
+                        grid-column: 2 / 3;
                         grid-row: 3 / 4;
                     }
 
                     &:nth-child(8) {
-                        grid-column: 4 / 5;
+                        grid-column: 3 / 4;
                         grid-row: 3 / 4;
                     }
 
                     &:nth-child(9) {
-                        grid-column: 5 / 6;
+                        grid-column: 4 / 5;
                         grid-row: 3 / 4;
                     }
 
                     &:nth-child(10) {
-                        grid-column: 6 / 7;
+                        grid-column: 5 / 6;
                         grid-row: 3 / 4;
                     }
 
                     &:nth-child(11) {
-                        grid-column: 2 / 3;
-                        grid-row: 4 / 5;
+                        grid-column: 6 / 7;
+                        grid-row: 3 / 4;
                     }
 
                     &:nth-child(12) {
-                        grid-column: 3 / 4;
-                        grid-row: 4 / 5;
+                        grid-column: 7 / 8;
+                        grid-row: 3 / 4;
                     }
 
                     &:nth-child(13) {
-                        grid-column: 4 / 5;
+                        grid-column: 2 / 3;
                         grid-row: 4 / 5;
                     }
 
                     &:nth-child(14) {
-                        grid-column: 5 / 6;
+                        grid-column: 3 / 4;
                         grid-row: 4 / 5;
                     }
 
                     &:nth-child(15) {
-                        grid-column: 6 / 7;
+                        grid-column: 4 / 5;
                         grid-row: 4 / 5;
                     }
 
                     &:nth-child(16) {
+                        grid-column: 5 / 6;
+                        grid-row: 4 / 5;
+                    }
+
+                    &:nth-child(17) {
+                        grid-column: 6 / 7;
+                        grid-row: 4 / 5;
+                    }
+
+                    &:nth-child(18) {
+                        grid-column: 7 / 8;
+                        grid-row: 4 / 5;
+                    }
+
+                    &:nth-child(19) {
                         grid-column: 2 / 3;
                         grid-row: 5 / 6;
                     }
 
-                    &:nth-child(17) {
+                    &:nth-child(20) {
                         grid-column: 3 / 4;
                         grid-row: 5 / 6;
                     }
 
-                    &:nth-child(18) {
+                    &:nth-child(21) {
                         grid-column: 4 / 5;
                         grid-row: 5 / 6;
                     }
 
-                    &:nth-child(19) {
+                    &:nth-child(22) {
                         grid-column: 5 / 6;
                         grid-row: 5 / 6;
                     }
 
-                    &:nth-child(20) {
+                    &:nth-child(23) {
                         grid-column: 6 / 7;
+                        grid-row: 5 / 6;
+                    }
+
+                    &:nth-child(24) {
+                        grid-column: 7 / 8;
                         grid-row: 5 / 6;
                     }
                 }
@@ -173,7 +198,7 @@ h1 {
 
                 &:first-child,
                 &:nth-child(4) {
-                    grid-column: 1 / span 7;
+                    grid-column: 1 / span 8;
                     grid-row: 1;
                 }
 
@@ -187,7 +212,7 @@ h1 {
                 }
 
                 &:nth-child(3) {
-                    grid-column: 7;
+                    grid-column: 8;
                 }
 
                 &:nth-child(4) {
